@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2014-01-06 17:38 pjf ;
+; @(#)$Ident: dist.ini 2014-01-07 21:53 pjf ;
 
 name = Module-Provision
 
@@ -6,7 +6,7 @@ name = Module-Provision
 perl                  = 5.010001
 namespace::sweep      = 0.006
 Class::Null           = 2.101420
-Class::Usul           = v0.33.0
+Class::Usul           = v0.35.0
 Config::Tiny          = 2.13
 CPAN::Uploader        = 0.103004
 Date::Format          = 2.24
@@ -19,7 +19,7 @@ Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
 Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.133290
 Dist::Zilla::Plugin::Signature             = 1.100930
 Dist::Zilla::Plugin::VersionFromModule     = 0.08
-File::DataClass       = v0.25.0
+File::DataClass       = v0.30.0
 File::ShareDir        = 1.02
 File::Slurp           = 9999.13
 HTTP::Message         = 6.06
@@ -34,7 +34,7 @@ Moo                   = 1.003001
 Perl::Version         = 1.011
 Pod::Eventual         = 0.093330
 Template              = 2.22
-Type::Tiny            = 0.012
+Type::Tiny            = 0.030
 Unexpected            = 0.20.1
 
 [Prereqs / ConfigureRequires]
